# tba-parser

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
.github/workflows/: ci.yml
src/: custom2.rs  lib.rs  main.rs  parser.rs  util.rs
src/parser/: sentence.rs  tags.rs
