[package]
name = "tba-parser"
version = "0.1.0"
authors = ["Arsenii Lyashenko <arsenylyashenko.3@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Telegram Bot API parser"
repository = "https://github.com/teloxide/tba-parser"
documentation = "https://github.com/teloxide/tba-parser"
readme = "README.md"
include = ["Cargo.toml", "LICENSE-*.md", "src/**/*"]
keywords = ["telegram", "telegram-bot-api", "api", "parser"]
categories = ["development-tools", "parsing"]

[dependencies]
scraper = "0.18.1"
ego-tree = "0.6.2"
thiserror = "1.0.22"
itertools = "0.12.1"
chrono = "0.4.19"
html2md = "0.2.10"
semver = "1.0.22"
percent-encoding = "2.1.0"
logos = "0.14.0"
log = "0.4.14"
tendril = "0.4.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
pulldown-cmark = "0.8.0"
anyhow = "1.0.34"
reqwest = { version = "0.10.8", features = ["blocking"] }
pretty_env_logger = "0.4.0"
